appset1/services/media/mango/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manga
  annotations:
    external-dns.alpha.kubernetes.io/hostname: manga.loeber.live
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: manga.loeber.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mango-svc
            port:
              name: web
  tls:
  - hosts:
    - manga.loeber.live
    secretName: manga-tls
